--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Quote Gen</title>
 <style>
 body {
-  background-image: image("pinkflower.jpg");
+  background-image: image("http://bestanimations.com/Nature/Flora/Trees/tree-animated-gif-3.gif");
 }
 h1 {
   margin: 40px;
