--- a/index.html
+++ b/index.html
@@ -5,27 +5,27 @@
     <title>Quote Gen</title>
 <style>
 body {
-  background-image: image("http://bestanimations.com/Nature/Flora/Trees/tree-animated-gif-3.gif");
+  background-image: url("background.jpg");
 }
 h1 {
   margin: 40px;
-  color: grey;
+  color: black;
   font-style: oblique;
-}
-.script {
-  font-size: 36px;
 }
 div {
     
     outline-style: dotted;
     margin: 40px;
-    background-color: lightpink;
+    background-color: none;
     padding-top: 50px;
     padding-right: 30px;
     padding-bottom: 50px;
     padding-left: 80px;
     text-align: justify;
     letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 20px;
+    
 }
 .center {
     margin: auto;
