--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Quote Gen</title>
 <style>
 body {
-  background-image: url("background.jpg");
+  background-image: image("background.jpg");
 }
 h1 {
   margin: 40px;
