--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <title>Quote Gen</title>
 <style>
 body {
-  background-image: image("background.jpg");
+  background-color: none;
+  background-image: url("background.jpg");
+  background-size: cover;
+  background-repeat: repeat;
 }
 h1 {
   margin: 40px;
   color: black;
   font-style: oblique;
 }
+
 div {
-    
+
     outline-style: dotted;
     margin: 40px;
     background-color: none;
@@ -25,7 +29,7 @@ div {
     letter-spacing: 3px;
     font-weight: bold;
     font-size: 20px;
-    
+
 }
 .center {
     margin: auto;
